--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,22 @@
     <title>Pulse</title>
 </head>
 <body>
-    
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="../img/running-man.png">
+                </a>
+                <div class="header__offical">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contact">
+                    <a href="+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="button">заказать звонок</button>
+                </div>
+            </header>
+        </div>
+    </div>
 </body>
 </html>
