--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,39 @@
                     Официальный представитель
                     <span>Garmin, Polar, Suunto</span>
                 </div>
-                <div class="header__contact">
+                <div class="header__contacts">
                     <a href="+74999228974" class="header__phone">+7 (499) 922-89-74</a>
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
+            
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/stopwatch.png" alt="">
+                        Время подбора: 
+                        10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/app_hand_cart.png" alt="">
+                        Бесплатная 
+                        доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/messages.png" alt="">
+                        Ответим 
+                        на все вопросы
+                    </div>
+                </div>
+
+                <button class="button button--main">заказать консультацию</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">Перейти в каталог</a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
