--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
-            
+
             <div class="promo__wrapper">
                 <h1 class="promo__header">Подбор пульсометра</h1>
                 <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
@@ -53,6 +53,65 @@
                     <a href="#">Перейти в каталог</a>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="advantages">
+        <div class="container">
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <div class="advantages__icon">
+                        <img src="icons/cup.png" alt="">
+                    </div>
+                    <div class="advantages__title">
+                        Делимся опытом
+                    </div>
+                    <div class="advantages__text">
+                        Наши сотрудники всегда готовы поделиться своим опытом, 
+                        так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__icon">
+                        <img src="icons/heart.png" alt="">
+                    </div>
+                    <div class="advantages__title">
+                        Заботимся о здоровье
+                    </div>
+                    <div class="advantages__text">
+                        Мы работаем для того, 
+                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__icon">
+                        <img src="icons/shoe.png" alt="">
+                    </div>
+                    <div class="advantages__title">
+                        Учим бегать
+                    </div>
+                    <div class="advantages__text">
+                        Помогаем с обучением правильной технике бега! 
+                        Дружим с крупнейшей школой бега в России - <span class="advantages--red-text">I LOVE RUNNING.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title--left">Получите бесплатную консультацию <br>по подбору пульсометра</h2>
+            <div class="consultation__descr">
+                Просто заполните форму заявки <br>и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required type="text" placeholder="Ваше имя">
+                <input name="phone" required type="number" placeholder="Ваш телефон">
+                <input name="email" required type="email" placeholder="Ваш E-mail">
+
+                <button class="button button--submit">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
+            </form>
         </div>
     </div>
 </body>
