--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap-4.6.1-dist/css/bootstrap-reboot.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" href="css/style.min.css">
     <title>Pulse</title>
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
-                    <img src="../img/running-man.png">
+                    <img src="img/running-man.png">
                 </a>
                 <div class="header__offical">
                     Официальный представитель
@@ -54,9 +55,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="advantages">
+    <section class="advantages">
         <div class="container">
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
@@ -98,8 +99,9 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="consultation">
+    </section>
+
+    <section class="consultation">
         <div class="container">
             <h2 class="title title--left">Получите бесплатную консультацию <br>по подбору пульсометра</h2>
             <div class="consultation__descr">
@@ -113,6 +115,27 @@
                 <button class="button button--submit">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
-    </div>
+    </section>
+
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/slide_1.png" alt="slide">
+                </div>
+                <div>
+                    <img src="img/slide_1.png" alt="slide">
+                </div>
+                <div>
+                    <img src="img/slide_1.png" alt="slide">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
