--- a/src/index.html
+++ b/src/index.html
@@ -385,6 +385,54 @@
         </div>
     </section>
 
+    <section class="feedback">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+
+            <div class="feedback__item">
+                <img src="img/photo_1.png" alt="Ирина Иванченко" class="feedback__img">
+                <div class="feedback__block">
+                    <span class="feedback__name">Ирина Иванченко</span>
+                    <span class="feedback__count">2 полумарафона</span>
+                    <span class="feedback__descr">
+                        Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же. 
+                        <span class="feedback__descr--br">Новые цели - новый гаджет!</span>
+                        <span class="feedback__descr--br">Спасибо, RunSmart!</span>
+                    </span>
+                </div>
+            </div>
+            
+            <div class="feedback__item">
+                <img src="img/photo_2.png" alt="Иван Сёмочкин" class="feedback__img">
+                <div class="feedback__block">
+                    <span class="feedback__name">Иван Сёмочкин</span>
+                    <span class="feedback__count">1 полумарафон</span>
+                    <span class="feedback__descr">
+                        Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.
+                        <span class="feedback__descr--br">
+                            С ними подготовился к своему первому полумарафону! Спасибо!!!
+                        </span>
+                    </span>
+                </div>
+            </div>
+
+            <div class="feedback__item">
+                <img src="img/photo_3.png" alt="Юлия Дашкина" class="feedback__img">
+                <div class="feedback__block">
+                    <span class="feedback__name">Юлия Дашкина</span>
+                    <span class="feedback__count">2 полумарафона</span>
+                    <span class="feedback__descr">
+                        Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+                        <span class="feedback__descr--br">
+                            Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!
+                        </span>
+                        <span class="feedback__descr--br">Спасибо!!!</span>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
